[package]
name = "cgm"
version = "0.1.0"
edition = "2024"
description = "Convenient GPU Manager"
license = "MIT"
repository = "https://github.com/Ying-Luan/cgm"
readme = "README.md"
authors = ["Ying Luan"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
comfy-table = "7.2.2"
daemonize = "0.5.0"
nix = { version = "0.31.2", features = ["user", "process", "signal", "fs"] }
nvml-wrapper = "0.12.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.47", features = [
    "formatting",
    "local-offset",
    "macros",
] }
